fix icons on mobile

--- a/main/components/IconSection/index.styl
+++ b/main/components/IconSection/index.styl
@@ -41,3 +41,7 @@ _darkGray = #636363
   font-weight 200
   font-size font(xl)
   margin-bottom gutter(l)
+
+.image
+  width 60px
+  height 60px
